ajuste de layout, adicionado efetito no menu lateral e correção no tratamento do backend

--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               }
             ],
             "styles": [
-              "src/theme.scss",
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
